--- a/index.html
+++ b/index.html
@@ -6,12 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorting Visualizer</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sonsie+One&family=WindSong:wght@400;500&display=swap"
+        rel="stylesheet">
 </head>
+
+<nav>
+    <div class="range">
+        <label for="sizeInput">
+            Size
+        </label>
+        <input type="range" min="1" max="100" value="23" id="sizeInput">
+        <label for="speedInput">
+            Speed
+        </label>
+        <input type="range" min="100" max="1000" value="100" id="speedInput">
+    </div>
+    <button onclick="bubbleSort()" class="button"> Bubble Sort </button>
+    <button onclick="bubbleSort()" class="button"> Insertion Sort </button>
+    <button onclick="bubbleSort()" class="button"> Selection Sort </button>
+    <button onclick="bubbleSort()" class="button"> Merge Sort </button>
+    <button onclick="bubbleSort()" class="button"> Quick Sort </button>
+
+
+</nav>
 
 <body>
     <div class="container"></div>
-    <button onclick="bubbleSort()"> BUBBLE SORT </button>
     <script src="index.js"></script>
+    <script src="SortingAlgorithm/bubbleSort.js"></script>
 </body>
 
 </html>
