Add some Utitlity Function.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <div class="container"></div>
     <script src="index.js"></script>
     <script src="Utils/sleep.js"></script>
+    <script src="Utils/buttonDisable.js"></script>
+    <script src="Utils/toast.js"></script>
     <script src="SortingAlgorithm/bubbleSort.js"></script>
     <script src="SortingAlgorithm/insertionSort.js"></script>
 </body>
