Selection sort is added.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <label for="sizeInput">
             Size
         </label>
-        <input type="range" min="1" max="70" value="23" id="sizeInput">
+        <input type="range" min="2" max="70" value="23" id="sizeInput">
     </div>
     <div>
         <label for="speedInput">
@@ -35,7 +35,7 @@
         <button onclick="insertionSort()" class="button"> Insertion Sort </button>
     </div>
     <div>
-        <button onclick="bubbleSort()" class="button"> Selection Sort </button>
+        <button onclick="selectionSort()" class="button"> Selection Sort </button>
     </div>
     <div>
         <button onclick="bubbleSort()" class="button"> Merge Sort </button>
@@ -53,6 +53,7 @@
     <script src="Utils/toast.js"></script>
     <script src="SortingAlgorithm/bubbleSort.js"></script>
     <script src="SortingAlgorithm/insertionSort.js"></script>
+    <script src="SortingAlgorithm/selectionSort.js"></script>
 </body>
 
 </html>
