Change UI and Add Merge Sort Visualizer.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <label for="speedInput">
             Speed
         </label>
-        <input type="range" min="500" max="3000" value="1000" id="speedInput">
+        <input type="range" min="100" max="1000" value="200" id="speedInput">
     </div>
     <div>
         <button onclick="bubbleSort()" class="button"> Bubble Sort </button>
@@ -38,7 +38,7 @@
         <button onclick="selectionSort()" class="button"> Selection Sort </button>
     </div>
     <div>
-        <button onclick="bubbleSort()" class="button"> Merge Sort </button>
+        <button onclick="mergeSort()" class="button"> Merge Sort </button>
     </div>
     <div>
         <button onclick="bubbleSort()" class="button"> Quick Sort </button>
@@ -54,6 +54,7 @@
     <script src="SortingAlgorithm/bubbleSort.js"></script>
     <script src="SortingAlgorithm/insertionSort.js"></script>
     <script src="SortingAlgorithm/selectionSort.js"></script>
+    <script src="SortingAlgorithm/mergeSort.js"></script>
 </body>
 
 </html>
